Working heuristic. Note: verify feasibility.

--- a/src/tinylog.properties
+++ b/src/tinylog.properties
@@ -1,5 +1,5 @@
 tinylog.writer1 = console
-tinylog.writer1.level = debug
+tinylog.writer1.level = info
 tinylog.writer1.format = {{level}:|min-size=8} {{class_name}.{method}():|min-size=35} {message}
 
 tinylog.writer2 = rollingfile
