Added ExpensiveDestroy and small tests.

--- a/src/tinylog.properties
+++ b/src/tinylog.properties
@@ -6,6 +6,6 @@ tinylog.writer2 = rollingfile
 tinylog.writer2.format = {date:yyyy-MM-dd HH:mm:ss} {{class_name}.{method}()|min-size=35} {{level}:|min-size=8} {message}
 tinylog.writer2.filename = log/log.txt
 tinylog.writer2.backups = 1
-tinylog.writer2.level = trace
+tinylog.writer2.level = debug
 tinylog.writer2.buffered = true
 tinylog.writer2.label = timestamp
