Better gitignore and better runs

--- a/src/tinylog.properties
+++ b/src/tinylog.properties
@@ -2,12 +2,12 @@ tinylog.writer1 = console
 tinylog.writer1.level = info
 tinylog.writer1.format = {date:yyyy-MM-dd HH:mm:ss} [{thread}] {class}.{method}()\n{level}: {message}
 
-tinylog.writer2 = sharedfile
-tinylog.writer2.format = {date:yyyy-MM-dd HH:mm:ss} [{thread}] {class}.{method}()\n{level}: {message}
-tinylog.writer2.filename = log/log.txt
-tinylog.writer2.backups = 5
-tinylog.writer2.level = debug
-tinylog.writer2.buffered = true
-tinylog.writer2.label = startup
+#tinylog.writer2 = sharedfile
+#tinylog.writer2.format = {date:yyyy-MM-dd HH:mm:ss} [{thread}] {class}.{method}()\n{level}: {message}
+#tinylog.writer2.filename = log/log.txt
+#tinylog.writer2.backups = 5
+#tinylog.writer2.level = debug
+#tinylog.writer2.buffered = true
+#tinylog.writer2.label = startup
 
 tinylog.writingthread = = true
