--- a/.gitignore
+++ b/.gitignore
@@ -86,5 +86,9 @@ local.properties
 *_oracs_*.csv 
 
 log/
-solutions/initial_*
 !lib/*.jar
+
+solutions/solutions.7z
+solutions/solutions.zip
+solutions/initial/*.csv
+
